tests/test_bool/bad/test_xor_with_int.catala_en
## 'xor' should be a boolean operator

```catala
declaration scope TestXorWithInt:
  context test_var content integer

scope TestXorWithInt:
  definition test_var equals 10 xor 20
```
